...
    android:layout_height="match_parent"
    android:background="#131418"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etRecipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="18dp"
        android:theme="@style/EditText.Theme"
...
        android:layout_marginEnd="20dp"
        android:text="@string/bitid_noconnection"
        android:textColor="@color/red"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btOk"
        style="@style/MyceliumButton.FIO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
...
