...
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:textColor="@color/semidarkgreen"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvSending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="0dp"
            android:gravity="center_horizontal"
            android:textColor="@color/semidarkgreen"
            android:textSize="18sp" />
        
        <!-- Send -->

        <Button
            android:id="@+id/btSend"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
...
