...
            android:text="@string/clipboard"
            android:textStyle="bold"
            android:textSize="20sp" />

        <!-- Manual Entry -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btManualEntry"
            style="@style/MyceliumButton.FIO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="6dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
...
