...
            android:singleLine="true"
            android:text="@{viewModel.requestedAmountFormatted}"
            android:textAlignment="@{Value.isNullOrZero(viewModel.requestedAmount) ? View.TEXT_ALIGNMENT_TEXT_START : View.TEXT_ALIGNMENT_TEXT_END}"
            android:textColor="@color/white"
            android:textColorHint="@color/darkgrey"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/btEnterAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvAmountFiat"
            app:layout_constraintTop_toTopOf="@id/btEnterAmount"
            tools:hint="0.00 tBTC"
            tools:text="5 tBTC" />

...
